--- a/themes/ultrathread/style.css
+++ b/themes/ultrathread/style.css
@@ -22,3 +22,6 @@ Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 */
 
+.is-style-fancy-quote {
+    color: tomato;
+}
