added color styles to large and fancy quote
changes made in block-editor.css

--- a/themes/ultrathread/assets/css/block-editor.css
+++ b/themes/ultrathread/assets/css/block-editor.css
@@ -1,3 +1,12 @@
-.is-style-fancy-quote {
+.wp-block-quote {
+    color:green;
+}
+
+
+.wp-block-quote.is-style-fancy-quote {
     color: tomato;
+}
+
+.wp-block-quote.is-style-large {
+    color: #0693e3;
 }
