block-editor.css
entry-content, align-wide, alignfull content added

--- a/themes/ultrathread/assets/css/block-editor.css
+++ b/themes/ultrathread/assets/css/block-editor.css
@@ -10,3 +10,17 @@
 .wp-block-quote.is-style-large {
     color: #0693e3;
 }
+
+.entry-content > * {
+    max-width:1000px;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+.alignwide{
+    max-width:1200px;
+}
+
+.alignfull{
+    width:100%;
+}
