--- a/themes/ultrathread/assets/css/block-editor.css
+++ b/themes/ultrathread/assets/css/block-editor.css
@@ -17,6 +17,12 @@
     margin-right:auto;
 }
 
+.entry-header > * {
+    max-width:1000px;
+    margin-left:auto;
+    margin-right:auto;
+}
+
 .alignwide{
     max-width:1200px;
 }
