sitelogo styles added to block editor

--- a/themes/ultrathread/assets/css/block-editor.css
+++ b/themes/ultrathread/assets/css/block-editor.css
@@ -1,9 +1,13 @@
 .wp-block-quote {
     color:green;
+    font-family: Gillsans,sans-serif;
 }
 
 .wp-block-site-logo.is-style-default {
     width:150px;
+    display: flex;
+    justify-content: center;
+    
 }
 
 
