--- a/themes/ultrathread/assets/css/block-editor.css
+++ b/themes/ultrathread/assets/css/block-editor.css
@@ -10,6 +10,14 @@
     
 }
 
+.wp-block-button__link {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    background-color: #228B22;
+    color:#f4e2b4;
+    border-radius:50px;
+    font-family: Gillsans,sans-serif;
+}
+
 
 .wp-block-quote.is-style-fancy-quote {
     color: tomato;
@@ -18,6 +26,12 @@
 .wp-block-quote.is-style-large {
     color: #0693e3;
 }
+
+.wp-block-heading h3 {
+    font-family: Gillsans,sans-serif;
+    color: #0693e3;
+}
+
 
 .entry-content > * {
     max-width:1000px;
