--- a/themes/ultrathread/assets/css/block-editor.css
+++ b/themes/ultrathread/assets/css/block-editor.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Allison&family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Allison&family=Bebas+Neue&family=Oswald&display=swap');
 
 /* WP BLOCK QUOTES */
 .wp-block-quote {
@@ -49,22 +49,22 @@ h2.wp-block-heading {
 
 /* WP BLOCK H3 */
 h3.wp-block-heading {
-    font-family: Gillsans, sans-serif;
+    font-family: Verdana, sans-serif;
     color: #003e1f;
 }
 /* WP BLOCK H4 */
 h4.wp-block-heading {
-    font-family: Gillsans, sans-serif;
+    font-family: Helvetica, sans-serif;
     color: #fff;
 }
 /* WP BLOCK H5 */
 h5.wp-block-heading {
-    font-family: Gillsans, sans-serif;
+    font-family: 'Bebas Neue', cursive;
     color: #71C671;
 }
 /* WP BLOCK H6 */
 h6.wp-block-heading {
-    font-family: Gillsans, sans-serif;
+    font-family: 'Allison', cursive;
     color: #000;
 }
 
