--- a/themes/ultrathread/assets/css/app.css
+++ b/themes/ultrathread/assets/css/app.css
@@ -1,3 +1,33 @@
 body{
     background-color: bisque ;
 }
+
+.site-header{
+    background-color:#003e1f;
+    color: #f79824;
+    display:flex;
+    padding: 10px;
+}
+.site-description{
+    font-family: 'Bebas Neue', cursive;
+}
+
+.site-footer{
+    background-color:#003e1f;
+    color: #f79824;
+    text-align:center;
+    height:200px;
+    
+}
+
+.site-info a{text-decoration: none; color: #fff;}
+
+.main-navigation {float: right;}
+.menu-item a{
+    color: #f79824;
+    font-family: "Montserrat";
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 19px;
+    
+}
