wp-block-image style added to block-editor.css

--- a/themes/ultrathread/assets/css/block-editor.css
+++ b/themes/ultrathread/assets/css/block-editor.css
@@ -93,6 +93,12 @@ h6.wp-block-heading {
     color: #000;
 }
 
+.wp-block-image.is-style-default{
+    width:1200px;
+    border-top-left-radius: 10px; 
+    border-bottom-right-radius: 10px; 
+   
+}
 
 .entry-content > * {
     max-width:1200px;
