--- a/themes/ultrathread/assets/css/app.css
+++ b/themes/ultrathread/assets/css/app.css
@@ -29,7 +29,7 @@ body{
 .site-footer-top{
     background-color:#71C671;
     color: #f79824;
-    padding: 6.25rem 0 2.5rem;
+    padding: 1.25rem 30px 1.5rem;
 }
 
 .site-footer-bottom-wrapper {
