--- a/themes/ultrathread/assets/css/app.css
+++ b/themes/ultrathread/assets/css/app.css
@@ -27,7 +27,7 @@ body{
 }
 
 .site-footer-top{
-    background-color:#71C671;
+    background-color:#2a752a;
     color: #f79824;
     padding: 1.25rem 30px 1.5rem;
 }
@@ -64,6 +64,19 @@ body{
     font-size: 19px;    
 }
 
+.menu-item-236 a{
+    color: #fff;
+    font-family: "Montserrat";
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 12px;
+    margin-left: -18px;
+    margin-top: -8px;    
+}
+
 .entry-title{
     color:#003e1f;
+}
+.widget-title{
+    color: #f79824;
 }
