--- a/themes/ultrathread/assets/css/block-editor.css
+++ b/themes/ultrathread/assets/css/block-editor.css
@@ -157,8 +157,43 @@ h6.wp-block-heading {
         
         border-bottom: 6px solid #003e1f;
         
-    }    
+    } 
     
+    .wp-block-media-text {
+        grid-template-columns: 1fr 50%;
+        border-radius: 30px;
+    }
+    
+    .wp-block-media-text__media img{
+        border-top-right-radius: 30px;
+        border-bottom-right-radius: 30px;
+    }
+
+    .wp-block-loginout a{
+        text-decoration: none;
+        font-family: 'DM Serif Display', serif;
+        font-size:1.2rem;
+    }
+
+    .wp-block-search__input{
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        font-family: 'DM Serif Display', serif;
+    }
+    .wp-block-search__button {
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+        font-family: 'DM Serif Display', serif;
+        background-color: #ffc125;
+        border: 1px solid #ccc;
+        padding: 0.375em 0.625em;
+        line-height: inherit;
+        height:40px;
+    }
+
+    .wp-block-search__label {
+        display: none;
+    }
 /* WP BLOCK ENDS
 --------------------------------------------- */
 .entry-content > * {
