wp-site-logo style added to block editor css

--- a/themes/ultrathread/assets/css/block-editor.css
+++ b/themes/ultrathread/assets/css/block-editor.css
@@ -16,6 +16,15 @@
     justify-content: center;
     
 }
+
+/* WP BLOCK SITE LOGO */
+.wp-block-site-title a {
+    font-style:italic;
+    font-weight:800;
+    font-size:25px;
+    color:#f79824;
+    
+}
 /* WP BLOCK BUTTONS */
 .wp-block-button__link {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
