--- a/themes/ultrathread/assets/css/app.css
+++ b/themes/ultrathread/assets/css/app.css
@@ -104,3 +104,5 @@ body{
    display:flex;
    justify-content: center;
 }
+
+.form-submit{display:flex;justify-content:center;border-radius: 10px;}
