block editor styles added

--- a/themes/ultrathread/assets/css/block-editor.css
+++ b/themes/ultrathread/assets/css/block-editor.css
@@ -50,21 +50,21 @@
 
 /* WP BLOCK HEADING */
 h1.wp-block-heading{
-    font-family: 'Oswald', sans-serif;
+    font-family: 'DM Serif Display', serif;
     color: #0693e3;
 }
 h1{
-    font-family: 'Oswald', sans-serif;
+    font-family: 'DM Serif Display', serif;
     color: #0693e3;
 }
 
 /* WP BLOCK H2 */
 h2 {
-    font-family: Gillsans, sans-serif;
+    font-family: 'DM Serif Display', serif;
     color: #e34806;
 }
 h2.wp-block-heading {
-    font-family: Gillsans, sans-serif;
+    font-family: 'DM Serif Display', serif;
     color: #e34806;
 }
 
@@ -225,9 +225,6 @@ h6.wp-block-heading {
     width:100%;
 }
 
-.home{
-    padding:20px;
-}
 
 .custom-logo{width:100px;}
 
