--- a/themes/ultrathread/assets/css/woocommerce.css
+++ b/themes/ultrathread/assets/css/woocommerce.css
@@ -1,5 +1,5 @@
 /*---- woocommercer css -----*/
-.woocommerce #respond input#submit.alt, .woocommerce a.button.alt, .woocommerce button.button.alt, .woocommerce input.button.alt {
+.woocommerce #respond input#submit.alt, .woocommerce button.button.alt, .woocommerce input.button.alt {
     background-color: #2a752a;
     font-family: 'DM Serif Display', serif;
     color: #fea437;
@@ -181,4 +181,89 @@
 .woocommerce #content div.product .summary .cart .quantity .qty, .woocommerce div.product .summary .cart .quantity .qty, .woocommerce-page #content div.product .summary .cart .quantity .qty, .woocommerce-page div.product .summary .cart .quantity .qty {
     font-family: 'Oswald';
     font-weight: 700;
+}
+/* CHECKOUT COUPON */
+.woocommerce-info::before {
+    color: #003e1f;
+}
+.woocommerce-info {
+    border-top: 6px solid #003e1f;
+    border-bottom: 6px solid #003e1f;
+    border-radius: 20px;
+    font-weight: 600;
+    font-family: 'Oswald';
+}
+.woocommerce-info a {
+    color:#e34806;
+}
+/* WOOCOMERECE TEXT FIELDS */
+.woocommerce form .form-row input.input-text, .woocommerce form .form-row textarea{
+    border-radius:20px;
+    padding-left:20px;
+}
+
+.woocommerce form .form-row label {
+    font-family: Gillsans,sans-serif;
+    font-weight: 700;
+    padding-left: 20px;
+}
+.woocommerce-input-wrapper strong{
+    padding-left:20px;
+}
+
+.select2-container--default .select2-selection--single {
+    background-color: #fff;
+    border: 3px solid #003e1f;
+    padding-left: 5px;
+    font-family: Gillsans,sans-serif;
+    border-radius: 20px;
+}
+
+.woocommerce table.shop_table th {
+    font-weight: 700;
+    font-size: larger;
+    padding: 9px 12px;
+    line-height: 1.5em;
+    font-family: Gillsans,sans-serif;
+    color:#002b16;
+}
+
+.woocommerce #payment #place_order, .woocommerce-page #payment #place_order {
+    border-radius: 20px;
+}
+
+.woocommerce-checkout #payment {
+    background: #fff;
+    border-radius: 20px;
+    font-family: Gillsans;
+    font-size: 19px;
+}
+.woocommerce-privacy-policy-text a{
+    color:#e34806;
+}
+.woocommerce a.button.alt{
+    border-radius: 20px !important;
+    background-color: #003e1f;
+    color: #f79824;
+}
+.product-name a{
+    font-family: Roboto,sans-serif;
+    color:#e34806;
+    font-weight: bold;
+}
+.product-price, .product-quantity, .product-subtotal{
+    font-family: Roboto,sans-serif;
+    font-weight: bold;
+}
+.woocommerce-shipping-destination, .woocommerce-shipping-methods{font-family: Roboto,sans-serif;}
+
+.woocommerce-shipping-calculator a{color:#e34806; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: bold;}
+
+.shipping_method label{
+    font-family: Roboto,sans-serif;
+}
+
+td.actions .input-text, .woocommerce table.cart td.actions .input-text, .woocommerce-page #content table.cart td.actions .input-text, .woocommerce-page table.cart td.actions .input-text {
+    width: 112px;
+    border-radius: 9px;
 }
