--- a/themes/ultrathread/assets/css/block-editor.css
+++ b/themes/ultrathread/assets/css/block-editor.css
@@ -70,11 +70,11 @@ h2.wp-block-heading {
 
 /* WP BLOCK H3 */
 h3 {
-    font-family: Verdana, sans-serif;
+    font-family: Gillsans,sans-serif;
     color: #023a1e;
 }
 h3.wp-block-heading {
-    font-family: Verdana, sans-serif;
+    font-family: Gillsans,sans-serif;
     color: #023a1e;
 }
 /* WP BLOCK H4 */
