--- a/themes/ultrathread/assets/css/woocommerce.css
+++ b/themes/ultrathread/assets/css/woocommerce.css
@@ -349,9 +349,8 @@ div.wpforms-container-full:hover .wpforms-form button[type=submit]:hover{
     display: inline-block;
     font-style: normal;
     font-variant: normal;
-    font-weight: 400;
     line-height: 1;
-    font-family: Font Awesome\ 6 Free;
+    font-family: "Font Awesome 5 Free";
     font-weight: 900;
     line-height: inherit;
     vertical-align: baseline;
@@ -359,18 +358,32 @@ div.wpforms-container-full:hover .wpforms-form button[type=submit]:hover{
     margin-right: 10px;
 }
 
-.woocommerce .woocommerce-MyAccount-navigation ul li.woocommerce-MyAccount-navigation-link.woocommerce-MyAccount-navigation-link--customer-logout a::before {
-    font-family: FontAwesome;
-    content: "\f007";
+/* customer dashboards*/
+.woocommerce .woocommerce-MyAccount-navigation ul li.woocommerce-MyAccount-navigation-link.woocommerce-MyAccount-navigation-link--dashboard a::before {
+    content: "\f4fe";
 }
-.woocommerce .woocommerce-MyAccount-navigation ul li.woocommerce-MyAccount-navigation-link.woocommerce-MyAccount-navigation-link--downloads a::before {
-    font-family: Font Awesome\ 6 Free;
-    content: "\f019";
-}
-
+/* customer orders*/
 .woocommerce .woocommerce-MyAccount-navigation ul li.woocommerce-MyAccount-navigation-link.woocommerce-MyAccount-navigation-link--orders a::before {
     content: "\f022";
 }
+
+/* customer downloads */
+.woocommerce .woocommerce-MyAccount-navigation ul li.woocommerce-MyAccount-navigation-link.woocommerce-MyAccount-navigation-link--downloads a::before {
+    content: '\f019';
+}
+/* customer address */
+.woocommerce .woocommerce-MyAccount-navigation ul li.woocommerce-MyAccount-navigation-link.woocommerce-MyAccount-navigation-link--edit-address a::before {
+    content: '\f2b9';
+}
+/* customer account */
+.woocommerce .woocommerce-MyAccount-navigation ul li.woocommerce-MyAccount-navigation-link.woocommerce-MyAccount-navigation-link--edit-account a::before {
+    content: '\f007';
+}
+/* customer logout */
+.woocommerce .woocommerce-MyAccount-navigation ul li.woocommerce-MyAccount-navigation-link.woocommerce-MyAccount-navigation-link--customer-logout a::before {
+    content: "\f2f5";
+}
+
 
 .woocommerce-account .woocommerce-MyAccount-content {
     border-radius: 5px;
@@ -397,9 +410,6 @@ legend{
     font-size: medium;
     font-weight: 600;
 }
-
-.fa-sign-out::before {
-    content: "\f08b"; }
 
 .woocommerce form.login {
         border: 3px solid green;
