comments and styles added to app css

--- a/themes/ultrathread/assets/css/app.css
+++ b/themes/ultrathread/assets/css/app.css
@@ -337,18 +337,19 @@ color:#f79824;
     border-radius: 10px;
     color: black;
 }
-
+/* search bar **/
 .header-search{
     margin-left: 33px;
     margin-right: 61px;
     margin-top: 54px;
 }
-
+/* search box */
 .search-field{
     border-radius:20px;
     padding-left: 15px;
+    width:auto;
 }
-
+/* search button */
 .search-submit{
     background: #003e1f;
     color: #f79824;
@@ -358,4 +359,35 @@ color:#f79824;
     padding: 5px;
     width: 194px;
     font-size: 20px;
+}
+
+/* search results of null */
+.no-results.not-found{
+    background: white;
+    padding:20px;
+
+}
+/* title for pages **/
+.page-title{
+    color:#003e1f;
+}
+/* main content area padding **/
+.site-main{
+    padding:0 40px;
+}
+/* background for policy pages **/
+.post-3, .post-192, .post-251, .post-31, .post-25, .post-250{
+    background: white;
+    margin-bottom: 30px;
+    border-radius:5px;
+}
+/* contact form style **/
+.post-31{
+    width: auto;
+    padding: 30px;
+}
+/* link color **/
+
+a{
+    color: #e34806;
 }
