--- a/themes/ultrathread/assets/css/app.css
+++ b/themes/ultrathread/assets/css/app.css
@@ -46,7 +46,7 @@ body{
 
 .footer-widgets-wrapper {
 	display: grid;
-	grid-gap: 30px;
+	
 	grid-template-columns: repeat(auto-fit, minmax(300px, 3fr));
 }
 
@@ -390,4 +390,21 @@ color:#f79824;
 
 a{
     color: #e34806;
+}
+/*  grid cell style for custom posts */
+.grid-margin-x>.small-4 {
+    width: calc(43.33333% - 16rem);
+    background-color:#003e1f;
+    padding:10px;
+    border-radius:5px;
+
+}
+/*  post style heading for custom posts */
+.post-title-heading{
+    font-size: 19px;
+    color:#f2f2f2;
+}
+/*  post style heading for custom posts */
+excerpt{
+    color:#f2f2f2;
 }
