--- a/themes/ultrathread/assets/css/app.css
+++ b/themes/ultrathread/assets/css/app.css
@@ -416,3 +416,12 @@ a{
     width: 1200px;
     margin: 50px auto;
 }
+/* custom-posts-permalink styles */
+.post_link{
+    background-color:#2a752a;
+    color: #f79824;
+    font-family: 'DM Serif Display', serif;
+    padding:5px;
+    border-radius: 20px;
+    font-size: smaller;
+}
